// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapMusicToMessage > with a URL and linked disciple 1`] = `
{
  "followUps": [
    {
      "content": "-# https://example.com/shadow-theme",
    },
  ],
  "reply": {
    "embed": {
      "description": "Music that plays in Moon Room for Shadow Kurt.",
      "title": "Shadow Theme",
    },
  },
}
`;

exports[`mapMusicToMessage > without a URL 1`] = `
{
  "followUps": [],
  "reply": {
    "embed": {
      "description": "-# No known source media for this song :(
Music that plays in Moon Room for Shadow Kurt.",
      "title": "Shadow Theme",
    },
  },
}
`;

exports[`mapMusicToMessage > without linked disciples 1`] = `
{
  "followUps": [
    {
      "content": "-# https://example.com/shadow-theme",
    },
  ],
  "reply": {
    "embed": {
      "description": "",
      "title": "Shadow Theme",
    },
  },
}
`;
